tests/transpiler/x/hs/list_assign.error
run: exit status 1

/workspace/mochi/tests/transpiler/x/hs/list_assign.hs:5:8: error:
    • No instance for (Num [a0]) arising from the literal ‘3’
    • In the expression: 3
      In an equation for ‘nums’: nums = 3
  |
5 | nums = 3
  |        ^

/workspace/mochi/tests/transpiler/x/hs/list_assign.hs:9:5: error:
    • Ambiguous type variable ‘a0’ arising from a use of ‘print’
      prevents the constraint ‘(Show a0)’ from being solved.
      Probable fix: use a type annotation to specify what ‘a0’ should be.
      Potentially matching instances:
        instance Show Ordering -- Defined in ‘GHC.Show’
        instance Show a => Show (Maybe a) -- Defined in ‘GHC.Show’
        ...plus 25 others
        ...plus 12 instances involving out-of-scope types
        (use -fprint-potential-instances to see them all)
    • In a stmt of a 'do' block: print ((nums !! 1))
      In the expression: do print ((nums !! 1))
      In an equation for ‘main’: main = do print ((nums !! 1))
  |
9 |     print ((nums !! 1))
  |     ^^^^^
