tests/transpiler/x/hs/list_assign.hs
{-# LANGUAGE DuplicateRecordFields #-}
{-# LANGUAGE OverloadedRecordDot #-}
{-# LANGUAGE NoFieldSelectors #-}
-- Generated by Mochi transpiler v0.10.33 on 2025-07-21 18:46 GMT+7
nums = 3

main :: IO ()
main = do
    print ((nums !! 1))
